# jirabatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  piemaker.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
complexity/radon/: index.html  report.txt
coverage/coverage/: class_index.html  function_index.html  index.html  status.json  z_e980c601d54ab408___init___py.html  z_e980c601d54ab408_atlas_py.html  z_e980c601d54ab408_logger_py.html
doc/sphinx/: conf.py  index.html  index.rst  jirabatch.rst  objects.inv  searchindex.js
doc/sphinx/_build/doctrees/: environment.pickle  index.doctree  jirabatch.doctree
doc/sphinx/_build/html/: .buildinfo  genindex.html  jirabatch.html  search.html
doc/sphinx/_build/html/_sources/: index.rst.txt
doc/sphinx/_sources/: index.rst.txt
examples/: comprehensive.yaml  defaults-epic-story-subtask.yaml  epic-comprehensive.yaml  epic-simple.yaml  epic-with-story.yaml  issues.yaml  jirabatch-cli.sh  jirabatch.yaml  story-comprehensive.yaml  story-simple.yaml  story-with-subtask.yaml  task-comprehensive.yaml  task-simple.yaml  task-with-subtask.yaml
jirabatch/: __init__.py  atlas.py  logger.py
jiraiya/: __init__.py  atlas.py  logger.py
lint/pylint/: index.html  report.json
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_atlas.py  test_atlas.xy  test_jirabatch.py  test_jiraiya.xy  test_logger.py
tests-integration/: test_cli.py  test_constructor.py  test_constructor.xy
