[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[installer]
no-binary = [ ":none:" ]

[tool.poetry]
name = "jirabatch"
version = "0.9.0-pre.0"
description = "Create Jira tickets via YAML"
license = "Apache-2.0"
authors = [ "Cliffano Subagio <cliffano@gmail.com>" ]
readme = "README.md"
homepage = "https://github.com/cliffano/jirabatch"
repository = "https://github.com/cliffano/jirabatch"
documentation = "https://github.com/cliffano/jirabatch"
keywords = [ "jirabatch", "jira", "issues" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[[tool.poetry.packages]]
include = "jirabatch"

[tool.poetry.scripts]
jirabatch = "jirabatch:cli"

[tool.poetry.dependencies]
python = "^3.10"
cfgrw = "~1.0.0"
click = "~8.2.1"
conflog = "~2.1.0"
jira = "~3.10.5"
PyYAML = "~6.0.2"

[tool.poetry.group.dev.dependencies]
black = "~25.1.0"
twine = "~6.1.0"
wheel = "~0.45.1"

[tool.poetry.group.test.dependencies]
coverage = "~7.8.2"
numpy = "1.26.4" # https://stackoverflow.com/questions/78634235/numpy-dtype-size-changed-may-indicate-binary-incompatibility-expected-96-from
pylint = "~3.3.7"
pytest = "~8.3.5"
wily = "~1.25.0"

[tool.poetry.group.doc.dependencies]
ansi2html = "~1.9.2"
pylint-report = "~2.4.2"
pytest-html = "~4.2.0"
Sphinx = "8.1.3" # Pinned for Python 3.10 support
